--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,6 @@
     "bootstrap": "4.5.0",
     "chart.js": "2.9.3",
     "history": "4.10.1",
-    "node-sass": "4.14.1",
     "perfect-scrollbar": "1.5.0",
     "react": "16.13.1",
     "react-chartjs-2": "2.9.0",
@@ -16,7 +15,8 @@
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.1",
-    "reactstrap": "8.4.1"
+    "reactstrap": "8.4.1",
+    "sass": "^1.56.1"
   },
   "scripts": {
     "start": "react-scripts start",
