--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,7 @@
     "sass": "^1.56.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3001 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
